[tool.poetry]
name = "rebangalifish"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
discord = "^1.0.1"
flask = "^1.1.2"
mendeleev = "^0.6.0"
ChemSpiPy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
